clean up scss, fix nav button misalignment

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
+// section-specific styling:
+@use '../styles/nav-bar.scss';
+
 // global variables/imports:
 :root {
     --rvv: calc(1rem + 1vmin + 1vmax);
@@ -31,17 +34,22 @@ time, mark, audio, video {
 }
 
 a {
+    color: black;
     text-decoration: none;
 }
 
-html {
-    box-sizing: border-box;
+a:visited {
+    color: black;
+}
 
+html {
+    box-sizing: border-box; 
+    
     body {
         min-height: 100vh;
         width: 100vw;
         max-width: 100vw;
-        overflow-x: hidden;
+        overflow-x: hidden; 
 
         .page-wrapper {
             min-height: 100vh;
