--- a/src/styles/nav-bar.scss
+++ b/src/styles/nav-bar.scss
@@ -1,15 +1,23 @@
-// NAV LAYOUT:
-
 .nav-bar {
     width: 100vw;
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
     grid-template-areas: "title shop cart";
     padding-bottom: 15px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid black;    
 
     .title-section {
         grid-area: title;
+        margin: calc(0.2*var(--rvv)) 0 0 calc(0.5*var(--rvv));
+        font-family: 'Leluja';
+        
+        .title-text {
+            font-size: calc(1.7*var(--rvv));
+        }
+        
+        .subtitle-text {
+            font-size: calc(0.9*var(--nav-text));
+        }
     }
 
     .nav-link {
@@ -17,30 +25,31 @@
         justify-content: center;
         align-items: flex-end;
 
+        .link-text {
+            color: black;
+            text-decoration: none;
+            border: 1px solid black;
+            cursor: pointer;
+            font-family: 'Leluja';
+            font-size: var(--nav-text);
+            margin-top: auto;
+            padding: 2px;
+        }
     }
     
     .shop-link {
         grid-area: shop;
     }
-
+    
     .cart-link {
         grid-area: cart;
         margin-right: 10px;
     }
 }
 
-.link-text {
-    border: 1px solid black;
-    cursor: pointer;
-    font-family: 'Leluja';
-    font-size: var(--nav-text);
-    margin-top: auto;
-    padding: 2px;
-}
 
-
-// desktop styles:
 @media screen and (min-width: 600px) {
+    
     .nav-bar {
         grid-template-columns: 1fr 400px 1fr;
         grid-column-gap: calc(var(--rvv));
@@ -48,22 +57,18 @@
 
         .title-section {
             text-align: center;
+
+            .subtitle-text {
+                font-size: var(--nav-text);
+            }
         }
 
         .nav-link {
             justify-content: flex-end;
-        }
 
-        .cart-link {
             .cart-link-text {
                 margin-right: auto;
             }
         }
-    
     }
-
-    
-
-    
-    
 }
